// SPDX-FileCopyrightText: (C) 2025 Intel Corporation
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package resources.location.v1;

import "google/api/field_behavior.proto";
import "resources/common/v1/common.proto";
import "resources/provider/v1/provider.proto";
import "buf/validate/validate.proto";

option go_package = "github.com/open-edge-platform/infra-core/apiv2/v2/internal/pbapi/resources/location/v1;locationv1";

// A region resource.
message RegionResource {
  // resource ID, generated by the inventory on Create.
  string resource_id = 1 [
    (google.api.field_behavior) = OUTPUT_ONLY,
    (buf.validate.field).string = {
      pattern: "^region-[0-9a-f]{8}$"
      max_len: 15
    }
  ];

  // The user-provided, human-readable name of region
  string name = 2 [(buf.validate.field).string = {
    pattern: "^$|^[a-zA-Z-_0-9./: ]+$"
    max_len: 50
  }];

  // The parent Region associated to the Region, when existent.
  RegionResource parent_region = 4 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Deprecated, The Region unique identifier. Alias of resourceId.
  string regionID = 5001 [
    (google.api.field_behavior) = OUTPUT_ONLY,
    (buf.validate.field).string = {
      pattern: "^region-[0-9a-f]{8}$"
      max_len: 15
    }
  ];

  // The metadata associated to the Region,
  // represented by a list of key:value pairs.
  repeated resources.common.v1.MetadataItem metadata = 5002 [
    (google.api.field_behavior) = OPTIONAL,
    (buf.validate.field).repeated = {
        min_items: 0,
        max_items: 100,
    }  
  ];

  // The rendered metadata from the Region parent(s)
  // that can be inherited by the Region, represented by a list of key:value pairs.
  // This field can not be used in filter.
  repeated resources.common.v1.MetadataItem inherited_metadata = 5003 [(google.api.field_behavior) = OUTPUT_ONLY];

  // The total number of sites in the region.
  int32 total_sites = 5004 [
    (google.api.field_behavior) = OUTPUT_ONLY,
    (buf.validate.field).int32.gte = 0
  ];

  // The parent Region unique identifier
  // that the region is associated to, when existent.
  // This field can not be used in filter.
  string parent_id = 5005 [
    (google.api.field_behavior) = INPUT_ONLY,
    (buf.validate.field).string = {
      pattern: "^$|^region-[0-9a-f]{8}$"
      max_len: 15
    }
  ];
  // Timestamps associated to the resource.
  resources.common.v1.Timestamps timestamps = 50100 [(google.api.field_behavior) = OUTPUT_ONLY];
}

// A site resource.
message SiteResource {
  // resource ID, generated by the inventory on Create.
  string resource_id = 1 [
    (google.api.field_behavior) = OUTPUT_ONLY,
    (buf.validate.field).string = {
      pattern: "^site-[0-9a-f]{8}$"
      max_len: 13
    }
  ];

  // The site's human-readable name.
  string name = 2 [(buf.validate.field).string = {
    pattern: "^$|^[a-zA-Z-_0-9./: ]+$"
    max_len: 50
  }];

  // Region this site is located in
  RegionResource region = 4 [(google.api.field_behavior) = OUTPUT_ONLY];

  // The geolocation latitude of the site.
  // Points are represented as latitude-longitude pairs in the E7 representation
  // (degrees are multiplied by 10**7 and rounded to the nearest integer).
  // siteLat must be in the range of +/- 90 degrees.
  int32 site_lat = 8 [
    (buf.validate.field).int32.lte = 900000000,
    (buf.validate.field).int32.gte = -900000000
  ];

  // The geolocation longitude of the site.
  // Points are represented as latitude-longitude pairs in the E7 representation
  // (degrees are multiplied by 10**7 and rounded to the nearest integer).
  // siteLng must be in the range of +/- 180 degrees (inclusive).
  int32 site_lng = 9 [
    (buf.validate.field).int32.lte = 1800000000,
    (buf.validate.field).int32.gte = -1800000000
  ];

  // Provider this Site is managed by
  provider.v1.ProviderResource provider = 30;

  // Deprecated, The site unique identifier. Alias of resourceId.
  string siteID = 5001 [
    (google.api.field_behavior) = OUTPUT_ONLY,
    (buf.validate.field).string = {
      pattern: "^site-[0-9a-f]{8}$"
      max_len: 13
  }];

  // The metadata associated to the Region,
  // represented by a list of key:value pairs.
  repeated resources.common.v1.MetadataItem metadata = 5002 [
    (google.api.field_behavior) = OPTIONAL,
    (buf.validate.field).repeated = {
          min_items: 0,
          max_items: 100,
      }
  ];

  // The rendered metadata from the Region parent(s)
  // that can be inherited by the Region, represented by a list of key:value pairs.
  // This field can not be used in filter.
  repeated resources.common.v1.MetadataItem inherited_metadata = 5003 [(google.api.field_behavior) = OUTPUT_ONLY];

  // The region's unique identifier
  // that the site is associated to. This field cannot be used in filter.
  string region_id = 5004 [
    (google.api.field_behavior) = INPUT_ONLY,
    (buf.validate.field).string = {
      pattern: "^$|^region-[0-9a-f]{8}$"
      max_len: 15
    }
  ];
  // Timestamps associated to the resource.
  resources.common.v1.Timestamps timestamps = 50100 [(google.api.field_behavior) = OUTPUT_ONLY];
}
